[gd_scene load_steps=20 format=3 uid="uid://bjl03vaij8x4v"]

[ext_resource type="Texture2D" uid="uid://be51bfmub2eai" path="res://Sprites/Objetos/cristal_ATIVADOR.png" id="1_12ouq"]
[ext_resource type="Script" path="res://Nodes/objetos/hit_cristal.gd" id="2_xnbcj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5hgwd"]
atlas = ExtResource("1_12ouq")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s05u4"]
atlas = ExtResource("1_12ouq")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7661"]
atlas = ExtResource("1_12ouq")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jmhk"]
atlas = ExtResource("1_12ouq")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpxl2"]
atlas = ExtResource("1_12ouq")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klilb"]
atlas = ExtResource("1_12ouq")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nufg1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hgwd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s05u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7661")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jmhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpxl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klilb")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_leuqq"]
offsets = PackedFloat32Array(0, 0.442197, 0.861272)
colors = PackedColorArray(1, 1, 1, 1, 0.800578, 0.800578, 0.800578, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p3sej"]
gradient = SubResource("Gradient_leuqq")
width = 128
height = 128
use_hdr = true
fill = 1
fill_from = Vector2(0.495726, 0.487179)
fill_to = Vector2(0.82906, 0.252137)

[sub_resource type="Animation" id="Animation_7n4ck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.473, 1, 0.882, 0.498)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("dark_afastar/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [61.0737]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StaticBody2D/CollisionShape2D:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60.407]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_1tu5a"]
resource_name = "brilho"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5, 1.3, 1.5]
}

[sub_resource type="Animation" id="Animation_fqjjl"]
resource_name = "brilho_estavel"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.75, 1.55, 1.75]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.0, 2.5, 3.0]
}

[sub_resource type="Animation" id="Animation_k8d70"]
resource_name = "brilhoaumentar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 1.75]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.473, 1, 0.882, 0.498), Color(1, 0.204725, 0.210981, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("dark_afastar/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [61.0737, 75.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StaticBody2D/CollisionShape2D:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [60.407, 74.0608]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 3.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_alkud"]
_data = {
"RESET": SubResource("Animation_7n4ck"),
"brilho": SubResource("Animation_1tu5a"),
"brilho_estavel": SubResource("Animation_fqjjl"),
"brilhoaumentar": SubResource("Animation_k8d70")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_roeu6"]
size = Vector2(14, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_p1v5s"]
radius = 61.0737

[sub_resource type="CircleShape2D" id="CircleShape2D_acncg"]
radius = 60.407

[node name="Hit_cristal" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_nufg1")
animation = &"hit"
frame = 4
frame_progress = 1.0
script = ExtResource("2_xnbcj")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.473, 1, 0.882, 0.498)
texture = SubResource("GradientTexture2D_p3sej")
texture_scale = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_alkud")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_roeu6")
debug_color = Color(0.187, 0.634, 0.299, 0.017)

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_roeu6")
debug_color = Color(0.187, 0.634, 0.299, 0.017)

[node name="dark_afastar" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="dark_afastar"]
shape = SubResource("CircleShape2D_p1v5s")
debug_color = Color(0.905, 0.306, 0, 0.492)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_acncg")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
